Fix scrollbar in draggable area.
Summary: This starts the content over 7 px instead of overlapping the drag bar on the side menu.

Test Plan: Tested it in Chrome with scrollbar

Reviewers: epriestley, btrahan

Reviewed By: epriestley

CC: aran, Korvin

Maniphest Tasks: T2322

Differential Revision: https://secure.phabricator.com/D4449

--- a/webroot/rsrc/css/aphront/phabricator-nav-view.css
+++ b/webroot/rsrc/css/aphront/phabricator-nav-view.css
@@ -43,7 +43,7 @@
   position: fixed;
   top: 0;
   bottom: 0;
-  left: 198px;
+  left: 205px;
   width: 7px;
 
   cursor: col-resize;
@@ -59,7 +59,10 @@
   background-repeat: no-repeat;
 }
 
+.device-desktop .phabricator-standard-page-body .has-drag-nav .phabricator-nav-content {
+  margin-left: 212px;
+}
+
 .device-desktop .has-local-nav .phabricator-nav-content {
   margin-left: 205px;
 }
-
